Fix dark mode

--- a/src/app/components/mobile-menu/mobile-menu.component.scss
+++ b/src/app/components/mobile-menu/mobile-menu.component.scss
@@ -73,10 +73,6 @@ button {
   }
 }
 
-.mobile-menu {
-  background-color: var(--menu-background-color);
-}
-
 .menu-sidenav-container {
   height: 100vh;
 }
@@ -106,6 +102,7 @@ button {
   display: flex;
   justify-content: space-around;
   z-index: 100;
+  background-color: var(--menu-background-color);
 }
 
 .bottom-nav-item {
