--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@
   --separator-color: rgb(51, 51, 51);
 }
 
-.light-theme {
+.dark-theme {
   --background-color: rgb(20, 19, 20);
   --text-color: rgb(229, 225, 227);
   --menu-background-color: rgb(33, 31, 33);
